--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "React 'Shallow Equal' HOC implementation to optimize shouldComponentUpdate with children or React elements",
   "scripts": {
-    "build": "node_modules/.bin/rollup -c rollup.config.js -o index.cjs.js -f cjs -g react:React && node_modules/.bin/rollup -c rollup.config.js -o index.es.js -f es -g react:React"
+    "build": "node_modules/.bin/rollup -c rollup.config.js -o index.cjs.js -f cjs -g react:React && node_modules/.bin/rollup -c rollup.config.js -o index.es.js -f es -g react:React",
+    "test": "jest"
   },
   "main": "index.cjs.js",
   "module": "index.es.js",
@@ -24,8 +25,15 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "~6.25.0",
+    "babel-jest": "~20.0.3",
+    "babel-preset-es2015": "~6.24.1",
     "babel-preset-es2015-rollup": "~3.0.0",
     "babel-preset-react": "~6.24.1",
+    "enzyme": "~2.9.1",
+    "jest": "~20.0.4",
+    "react": "~15.6.1",
+    "react-dom": "~15.6.1",
+    "react-test-renderer": "~15.6.1",
     "rollup": "~0.47.4",
     "rollup-plugin-babel": "~3.0.1",
     "rollup-plugin-node-resolve": "~3.0.0"
