--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "shouldComponentUpdate-Children",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "React 'Shallow Equal' HOC implementation to optimize shouldComponentUpdate with children or React elements",
   "scripts": {
     "build": "node_modules/.bin/rollup -c rollup.config.js -o index.cjs.js -f cjs -g react:React && node_modules/.bin/rollup -c rollup.config.js -o index.es.js -f es -g react:React",
-    "test": "jest"
+    "test": "node_modules/.bin/jest"
   },
   "main": "index.cjs.js",
   "module": "index.es.js",
@@ -27,7 +27,6 @@
     "babel-core": "~6.25.0",
     "babel-jest": "~20.0.3",
     "babel-preset-es2015": "~6.24.1",
-    "babel-preset-es2015-rollup": "~3.0.0",
     "babel-preset-react": "~6.24.1",
     "jest": "~20.0.4",
     "react": "~15.6.1",
