--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "shouldcomponentupdate-children",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "'Shallow Equal' HOC implementation to optimize shouldComponentUpdate with children / React elements.",
   "scripts": {
     "build": "node_modules/.bin/rollup -c rollup.config.js -o index.cjs.js -f cjs -g react:React && node_modules/.bin/rollup -c rollup.config.js -o index.es.js -f es -g react:React",
-    "test": "node_modules/.bin/jest"
+    "test": "jest --setupTestFrameworkScriptFile=raf/polyfill"
   },
   "main": "index.cjs.js",
   "module": "index.es.js",
@@ -28,11 +28,12 @@
     "babel-jest": "~20.0.3",
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-react": "~6.24.1",
-    "jest": "~20.0.4",
-    "react": "~15.6.1",
-    "react-dom": "~15.6.1",
-    "react-test-renderer": "~15.6.1",
-    "rollup": "~0.47.4",
+    "jest": "~21.2.1",
+    "raf": "~3.4.0",
+    "react": "~16.1.1",
+    "react-dom": "~16.1.1",
+    "react-test-renderer": "~16.1.1",
+    "rollup": "~0.52.0",
     "rollup-plugin-babel": "~3.0.1",
     "rollup-plugin-node-resolve": "~3.0.0"
   }
